# arich_standalone_G4

./: CMakeLists.txt  arich.cc  geomID7_VGM_vis.C  geometry.root  runarich.bash  setup_standalone_ARICHG4.bash  vis2.mac
include/: DetectorConstruction.hh  DetectorConstructionG1.hh  DetectorConstructionG2.hh  DetectorConstructionG3.hh  DetectorConstructionG4.hh  DetectorConstructionG5.hh  DetectorConstructionG6.hh  DetectorConstructionG7.hh  MagneticField.hh  PrimaryGeneratorAction.hh
src/: DetectorConstruction.cc  DetectorConstructionG1.cc  DetectorConstructionG2.cc  DetectorConstructionG3.cc  DetectorConstructionG4.cc  DetectorConstructionG5.cc  DetectorConstructionG6.cc  DetectorConstructionG7.cc  MagneticField.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  SensitiveDetector.cc  SteppingAction.cc
